--- a/assets/css/tour__country.css
+++ b/assets/css/tour__country.css
@@ -330,15 +330,42 @@
         height: 25px;
     }
 
-    .menuFilter button { 
+    .menuFilter button {
         width: 100%;
         margin-top: 10px;
         background-color: var(--color-orange);
         height: 41px;
         border-radius: 15px;
+        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.35);
     }
 
-    #menuFilter__undertext { 
+    .menuFilter__item__content {
+        display: flex;
+        gap: 5px;
+        align-items: center;
+    }
+
+    #filterImg1 {
+        display: none;
+    }
+
+    #filterImg2 {
+        display: none;
+    }
+
+    #filterImg3 {
+        display: none;
+    }
+
+    #filterImg4 {
+        display: none;
+    }
+
+    #filterImg5 {
+        display: none;
+    }
+
+    #menuFilter__undertext {
         opacity: 0.6;
     }
 
@@ -359,9 +386,12 @@
         gap: 5px;
         transition: all 0.3s ease;
         font-size: 16px;
+        max-height: 500px;
+        /* Установите желаемую максимальную высоту */
+        overflow-y: scroll;
     }
 
-    .submenu button { 
+    .submenu button {
         width: 100%;
         margin-top: 10px;
         background-color: var(--color-orange);
@@ -370,7 +400,11 @@
         height: 41px;
     }
 
-    .submenu__back { 
+    .btn__high__font { 
+        font-size: 20px;
+    }
+
+    .submenu__back {
         border: var(--color-orange) 1px solid;
         padding: 10px;
         border-radius: 15px;
@@ -383,6 +417,7 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+
     }
 
     .submenuItem {
@@ -396,17 +431,52 @@
     /* =============================================================== */
 
     .sort-menu {
-        display: none;
+        display: block;
         position: fixed;
         color: #FFF;
-        top: 14%;
+        top: 0;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -100%);
+        opacity: 0;
         background-color: var(--main-color-bg);
         padding: 20px;
         border: 1px solid #ccc;
         z-index: 999;
         width: 100%;
+        font-size: 16px;
+        transition: all 0.3s ease;
+    }
+
+    .sort-menu.visible { 
+        transform: translate(-50%, 0%);
+        opacity: 1;
+    }
+
+    .cfilter__info__items__back1 {
+        content: "";
+        position: fixed;
+        top: 0;
+        right: 1%;
+        transform: translateY(-100%);
+        z-index: 555;
+        width: 100%;
+        height: 0;
+        background-color: rgba(0, 0, 0, 0.35);
+        transition: all 0.3s ease;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
+
+    .cfilter__info__items__back1.visible {
+        content: "";
+        position: fixed;
+        top: 0;
+        right: 1%;
+        z-index: 555;
+        width: 100%;
+        height: 100%;
+        transform: translateY(0%);
+        background-color: rgba(0, 0, 0, 0.35);
     }
 
     .menu-item {
