--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -80,3 +80,10 @@
     font-family: 'Druk Cur';
     src: url(../fonts/druk-cur/Druk\ Text\ Wide\ Cyr\ Bold.otf);
 }
+
+@font-face { 
+    font-family : 'Gilroy';
+    src: url('../fonts/Gilroy/Gilroy-Light.otf') format('otf'); 
+    font-weight: 400;
+    font-style: normal;
+}
