--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3208,45 +3208,81 @@ body {
         border-radius: 20px;
     }
 
+    #priceToggle { 
+        width: 100%;
+    }
+
     .search__price__item {
         display: flex;
         flex-direction: column;
     }
 
-    .search__price div {
-        display: flex;
-        align-items: center;
-        gap: 5px;
+    .search-turs__var__func__text {
         width: 100%;
-        font-size: 13px;
-        margin: 5px 0px 0px 10px;
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
     }
 
-    #closePriceMenu {
-        vertical-align: top;
-        padding: 5px 5px 0px 0px;
+    #priceCountVar {
+        color: var(--color-orange);
+    }
+    
+
+    #rangeSliderPrice {
+        margin-top: 10px;
+        width: 100%;
     }
 
-    .gotPrice {
-        transition: all 0.3s ease;
-        height: 50px;
+    #rangeSliderPrice .noUi-handle {
+        width: 15px;
+        height: 15px;
+        background-color: #C2A97D;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        cursor: grab;
     }
 
-    .search__price input {
-        height: 30px;
+    /* Стили для линии между ползунками */
+    #rangeSliderPrice .noUi-connect {
+        background-color: #C2A97D;
+        height: 3px;
+        margin-top: 1px;
+        margin-left: 7px;
+        /* Уменьшаем левый отступ */
     }
 
-    .search-turs__input__price {
-        width: 100px;
-        height: 20px;
-        border: 1px solid #fff;
-        border-radius: 10px;
+    #rangeSliderPrice .noUi-connects::before {
+        content: "";
+        position: absolute;
+        top: -1px;
+        left: 0;
+        width: 7px;
+        /* Ширина левого отступа */
+        height: 4px;
+        /* Высота линии между ползунками */
+        background-color: #fff;
     }
 
-    .search__price.active {
-        opacity: 1;
-        transform: translateY(0);
+
+
+    #rangeSliderPrice .noUi-connects::after {
+        content: "";
+        position: absolute;
+        top: -0.5px;
+        right: -7px;
+        width: 7px;
+        height: 3.5px;
+        background-color: #C2A97D;
     }
+
+    /* Стили для линии, представляющей всю длину слайдера */
+    #rangeSliderPrice .noUi-origin {
+        height: 2px;
+
+    }
+
+    
 
     /* ================================================================================== */
     .list__star {
